color changed + logo and bg chnages

--- a/about.html
+++ b/about.html
@@ -132,15 +132,16 @@
             <div class="side-menu-head">
                 <div class="side-menu-logo">
                     <a class="dark-img" href="index.html"><img src="assets/img/logo/logo-2.png" alt="logo"></a>
-                    <a class="light-img" href="index.html"><img src="assets/img/logo/logo-3.png" alt="logo"></a>
+                    <a class="light-img" href="index.html"><img src="assets/img/logo/logo-1.png" alt="logo"></a>
                 </div>
                 <button class="mobile-side-menu-close"><i class="fa-regular fa-xmark"></i></button>
             </div>
             <div class="side-menu-wrap"></div>
             <ul class="side-menu-list">
-                <li><i class="fa-light fa-location-dot"></i>Address : <span>Amsterdam, 109-74</span></li>
-                <li><i class="fa-light fa-phone"></i>Phone : <a href="tel:+01569896654">+01 569 896 654</a></li>
-                <li><i class="fa-light fa-envelope"></i>Email : <a href="mailto:info@example.com">info@example.com</a>
+                <li><i class="fa-light fa-location-dot"></i>Address : <span>Routetomarket Media India Pvt Ltd.
+                        2nd floor Lingaraju Complex above Smart Point, Gandhi Bazaar, Basvangudi
+                        Bangalore - 560004</span></li>
+                <li><i class="fa-light fa-envelope"></i>Email : <a href="mailto:info@r2mi.in">info@example.com</a>
                 </li>
             </ul>
         </div>
@@ -164,7 +165,7 @@
         <div class="side-menu-content">
             <div class="side-menu-logo">
                 <a class="dark-img" href="index.html"><img src="assets/img/logo/logo-2.png" alt="logo"></a>
-                <a class="light-img" href="index.html"><img src="assets/img/logo/logo-3.png" alt="logo"></a>
+                <a class="light-img" href="index.html"><img src="assets/img/logo/logo-1.png" alt="logo"></a>
             </div>
             <div class="side-menu-about">
                 <div class="side-menu-header">
@@ -182,15 +183,13 @@
                 <ul class="side-menu-list">
                     <li>
                         <i class="fas fa-map-marker-alt"></i>
-                        <p>Valentin, Street Road 24, New York, </p>
+                        <p>Routetomarket <br> Media India Pvt Ltd.<br> Basvangudi
+                            Bangalore - 560004 </p>
                     </li>
-                    <li>
-                        <i class="fas fa-phone"></i>
-                        <a href="tel:+000123456789">+000 123 (456) 789</a>
-                    </li>
+
                     <li>
                         <i class="fas fa-envelope-open-text"></i>
-                        <a href="mailto:R2MIcontact@gmail.com">R2MIcontact@gmail.com</a>
+                        <a href="mailto:R2MIcontact@gmail.com">info@r2mi.in</a>
                     </li>
                 </ul>
             </div>
@@ -221,7 +220,7 @@
                 </div>
                 <div class="container">
                     <div class="page-header-content text-center">
-                        <h1 class="title">About Our Company</h1>
+                        <h1 class="title">About R2MI</h1>
                         <h4 class="sub-title"><a class="home" href="/">Home </a><span></span><a class="inner-page"
                                 href="about.html"> About Us</a></h4>
                     </div>
@@ -250,12 +249,9 @@
                             <div class="about-content-2">
                                 <div class="section-heading">
                                     <h4 class="sub-heading after-none" data-text-animation="fade-in"
-                                        data-duration="1.5">About Our Company</h4>
-                                    <h2 class="section-title" data-text-animation data-split="word" data-duration="1">We
-                                        design and develop outstanding Digital Products and digital- first Brands.</h2>
-                                    <p>Platea vehicula rutrum curae magna taciti acut malesuada inceptos phasellus
-                                        massa, eget ultrices tempor lacinia dictumst tincidunt leo mollis luctus varius
-                                        gravida eleifend cursus litora consequat...</p>
+                                        data-duration="1.5">About R2MI</h4>
+                                    <h2 class="section-title" data-text-animation data-split="word" data-duration="1">Empowering Your Brand's Success Through Comprehensive Business Solutions</h2>
+                                    <p>Established in December 2017, Routetomarket Media India Pvt Ltd (R2MI) has rapidly become a leader in delivering 360-degree business solutions. Our team of seasoned professionals specializes in Sales & Distribution, Trade Marketing, and Digital Marketing, ensuring tailored strategies that drive measurable results. We are dedicated to helping our clients navigate the dynamic market landscape and achieve their business objectives.</p>
                                 </div>
                                 <div class="about-items">
                                     <div class="about-item">
@@ -399,33 +395,20 @@
                                     <div class="tab-content" id="nav-tabContent">
                                         <div class="tab-pane fade show active" id="nav-home" role="tabpanel"
                                             aria-labelledby="nav-home-tab">
-                                            <h3 class="title">Digital Web Design Agency</h3>
-                                            <p class="mb-20">A web design agency is a multifaceted entity that plays a
-                                                pivotal role in shaping the digital presence of businesses and
-                                                individuals alike. These agencies are dynamic hubs of creativity,
-                                                technical expertise, and strategic thinking.</p>
-                                            <p class="mb-0">At the core of a web design agency's essence lies the
-                                                artistry of visual storytelling and user experience creation.</p>
+                                            <h3 class="title">Mission</h3>
+                                            <p class="mb-20">To serve as a one-stop solution for diverse industries, offering comprehensive 360-degree business solutions that encompass Sales & Distribution, Trade Marketing, ATL, TTL & BTL Marketing, and Digital Marketing.</p>
                                         </div>
                                         <div class="tab-pane fade" id="nav-profile" role="tabpanel"
                                             aria-labelledby="nav-profile-tab">
-                                            <h3 class="title">Digital Web Design Agency</h3>
-                                            <p class="mb-20">A web design agency is a multifaceted entity that plays a
-                                                pivotal role in shaping the digital presence of businesses and
-                                                individuals alike. These agencies are dynamic hubs of creativity,
-                                                technical expertise, and strategic thinking.</p>
-                                            <p class="mb-0">At the core of a web design agency's essence lies the
-                                                artistry of visual storytelling and user experience creation.</p>
+                                            <h3 class="title">Vision</h3>
+                                            <p class="mb-20">To build a unique platform that caters to both 'Made-in-India' and 'Make-for-India' brands, embodying the spirit of 'Ekoham Bahushyam'—the one who chose to become many. </p>
+                                            
                                         </div>
                                         <div class="tab-pane fade" id="nav-contact" role="tabpanel"
                                             aria-labelledby="nav-contact-tab">
-                                            <h3 class="title">Digital Web Design Agency</h3>
-                                            <p class="mb-20">A web design agency is a multifaceted entity that plays a
-                                                pivotal role in shaping the digital presence of businesses and
-                                                individuals alike. These agencies are dynamic hubs of creativity,
-                                                technical expertise, and strategic thinking.</p>
-                                            <p class="mb-0">At the core of a web design agency's essence lies the
-                                                artistry of visual storytelling and user experience creation.</p>
+                                            <h3 class="title">Goals</h3>
+                                            <p class="mb-20">Innovation: Continuously evolve our strategies and services to meet the dynamic needs of the market.</p>
+                                            <p class="mb-0">Client Success: Ensure our clients achieve their business objectives through tailored solutions.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -674,8 +657,9 @@
                                 <ul class="address-list">
                                     <li><a href="mailto:info@r2mi.in">info@r2mi.in</a></li>
                                     <!-- <li><a href="tel:+918048534240">+91 8048534240</a></li> -->
-                                    <li>Above Food World, 1st Floor Gandhi Bazar Main Road,<br>Basavanagudi,
-                                        Bengaluru-560004, Karnataka.</li>
+                                    <li>Routetomarket Media India Pvt Ltd.
+                                        2nd floor Lingaraju Complex above Smart Point, Gandhi Bazaar, Basvangudi
+                                        Bangalore - 560004</li>
                                 </ul>
                             </div>
                         </div>
