--- a/service-details.html
+++ b/service-details.html
@@ -132,15 +132,16 @@
             <div class="side-menu-head">
                 <div class="side-menu-logo">
                     <a class="dark-img" href="index.html"><img src="assets/img/logo/logo-2.png" alt="logo"></a>
-                    <a class="light-img" href="index.html"><img src="assets/img/logo/logo-3.png" alt="logo"></a>
+                    <a class="light-img" href="index.html"><img src="assets/img/logo/logo-1.png" alt="logo"></a>
                 </div>
                 <button class="mobile-side-menu-close"><i class="fa-regular fa-xmark"></i></button>
             </div>
             <div class="side-menu-wrap"></div>
             <ul class="side-menu-list">
-                <li><i class="fa-light fa-location-dot"></i>Address : <span>Amsterdam, 109-74</span></li>
-                <li><i class="fa-light fa-phone"></i>Phone : <a href="tel:+01569896654">+01 569 896 654</a></li>
-                <li><i class="fa-light fa-envelope"></i>Email : <a href="mailto:info@example.com">info@example.com</a>
+                <li><i class="fa-light fa-location-dot"></i>Address : <span>Routetomarket Media India Pvt Ltd. 
+2nd floor Lingaraju Complex above Smart Point, Gandhi Bazaar, Basvangudi 
+Bangalore - 560004</span></li>
+                                <li><i class="fa-light fa-envelope"></i>Email : <a href="mailto:info@r2mi.in">info@example.com</a>
                 </li>
             </ul>
         </div>
@@ -164,7 +165,7 @@
         <div class="side-menu-content">
             <div class="side-menu-logo">
                 <a class="dark-img" href="index.html"><img src="assets/img/logo/logo-2.png" alt="logo"></a>
-                <a class="light-img" href="index.html"><img src="assets/img/logo/logo-3.png" alt="logo"></a>
+                <a class="light-img" href="index.html"><img src="assets/img/logo/logo-1.png" alt="logo"></a>
             </div>
             <div class="side-menu-about">
                 <div class="side-menu-header">
@@ -182,15 +183,13 @@
                 <ul class="side-menu-list">
                     <li>
                         <i class="fas fa-map-marker-alt"></i>
-                        <p>Valentin, Street Road 24, New York, </p>
+                        <p>Routetomarket <br> Media India Pvt Ltd.<br> Basvangudi
+                        Bangalore - 560004 </p>
                     </li>
-                    <li>
-                        <i class="fas fa-phone"></i>
-                        <a href="tel:+000123456789">+000 123 (456) 789</a>
-                    </li>
+                    
                     <li>
                         <i class="fas fa-envelope-open-text"></i>
-                        <a href="mailto:R2MIcontact@gmail.com">R2MIcontact@gmail.com</a>
+                        <a href="mailto:R2MIcontact@gmail.com">info@r2mi.in</a>
                     </li>
                 </ul>
             </div>
