--- a/service.html
+++ b/service.html
@@ -130,7 +130,7 @@
                 <div class="side-menu-head">
                     <div class="side-menu-logo">
                         <a class="dark-img" href="index.html"><img src="assets/img/logo/logo-2.png" alt="logo"></a>
-                        <a class="light-img" href="index.html"><img src="assets/img/logo/logo-3.png" alt="logo"></a>
+                        <a class="light-img" href="index.html"><img src="assets/img/logo/logo-1.png" alt="logo"></a>
                     </div>
                     <button class="mobile-side-menu-close"><i class="fa-regular fa-xmark"></i></button>
                 </div>
@@ -180,7 +180,7 @@
             <div class="side-menu-content">
                 <div class="side-menu-logo">
                     <a class="dark-img" href="index.html"><img src="assets/img/logo/logo-2.png" alt="logo"></a>
-                    <a class="light-img" href="index.html"><img src="assets/img/logo/logo-3.png" alt="logo"></a>
+                    <a class="light-img" href="index.html"><img src="assets/img/logo/logo-1.png" alt="logo"></a>
                 </div>
                 <div class="side-menu-about">
                     <div class="side-menu-header">
@@ -196,7 +196,8 @@
                     <ul class="side-menu-list">
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
-                            <p>Valentin, Street Road 24, New York, </p>
+                            <p>Routetomarket <br> Media India Pvt Ltd.<br> Basvangudi
+                        Bangalore - 560004 </p>
                         </li>
                         <li>
                             <i class="fas fa-phone"></i>
@@ -204,7 +205,7 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope-open-text"></i>
-                            <a href="mailto:R2MIcontact@gmail.com">R2MIcontact@gmail.com</a>
+                            <a href="mailto:R2MIcontact@gmail.com">info@r2mi.in</a>
                         </li>
                     </ul>
                 </div>
@@ -566,8 +567,9 @@
                                 <ul class="address-list">
                                     <li><a href="mailto:info@r2mi.in">info@r2mi.in</a></li>
                                     <!-- <li><a href="tel:+918048534240">+91 8048534240</a></li> -->
-                                    <li>Above Food World, 1st Floor Gandhi Bazar Main Road,<br>Basavanagudi,
-                                        Bengaluru-560004, Karnataka.</li>
+                                    <li>Routetomarket Media India Pvt Ltd. 
+2nd floor Lingaraju Complex above Smart Point, Gandhi Bazaar, Basvangudi 
+Bangalore - 560004</li>
                                 </ul>
                             </div>
                         </div>
