Card Images updated

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <li>
                         <i class="fas fa-map-marker-alt"></i>
                         <p>Routetomarket <br> Media India Pvt Ltd.<br> Basvangudi
-                        Bangalore - 560004 </p>
+                            Bangalore - 560004 </p>
                     </li>
                     <li>
                         <i class="fas fa-envelope-open-text"></i>
@@ -207,12 +207,12 @@
     </div>
     <!-- ./ preloader -->
 
-    <div id="smooth-wrapper"> 
+    <div id="smooth-wrapper">
         <div id="smooth-content">
 
             <section class="hero-section-2">
                 <div class="hero-text var(--rr-color-heading-primary)">Route To
-                    <span class="inner-text" >
+                    <span class="inner-text">
                         Market
                         <!-- <span class="container-svg">
                         <svg>
@@ -302,7 +302,7 @@
                             <div class="swiper-slide">
                                 <div class="service-item service-item-2">
                                     <div class="service-thumb">
-                                        <img src="assets/img/service/ATLMarketing.png" alt="service">
+                                        <img src="assets/img/service/ATLarketing.jpg" alt="service">
                                         <div class="service-icon">
                                             <svg xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" width="70"
@@ -389,7 +389,7 @@
                             <div class="swiper-slide">
                                 <div class="service-item service-item-2">
                                     <div class="service-thumb">
-                                        <img src="assets/img/service/BTLMarketing.png" alt="service">
+                                        <img src="assets/img/service/BTLMarketing.jpg" alt="service">
                                         <div class="service-icon">
                                             <svg xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" width="70"
@@ -421,7 +421,7 @@
                             <div class="swiper-slide">
                                 <div class="service-item service-item-2">
                                     <div class="service-thumb">
-                                        <img src="assets/img/service/TTLMarketing.png" alt="service">
+                                        <img src="assets/img/service/TTLMarketing.jpg" alt="service">
                                         <div class="service-icon">
                                             <svg xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" width="70"
@@ -582,7 +582,7 @@
                             <div class="swiper-slide">
                                 <div class="service-item service-item-2">
                                     <div class="service-thumb">
-                                        <img src="assets/img/service/MerchandiseMarketing.png" alt="service">
+                                        <img src="assets/img/service/MerchendiseMarketing.jpg" alt="service">
                                         <div class="service-icon">
                                             <svg xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" width="70"
@@ -648,7 +648,7 @@
                             <div class="swiper-slide">
                                 <div class="service-item service-item-2">
                                     <div class="service-thumb">
-                                        <img src="assets/img/service/B2BMarketing.png" alt="service">
+                                        <img src="assets/img/service/B2BMarketing.jpg" alt="service">
                                         <div class="service-icon">
                                             <svg xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" width="70"
@@ -708,7 +708,7 @@
                             <div class="swiper-slide">
                                 <div class="service-item service-item-2">
                                     <div class="service-thumb">
-                                        <img src="assets/img/service/CorporateEvents.png" alt="service">
+                                        <img src="assets/img/service/corporateEvents.jpg" alt="service">
                                         <div class="service-icon">
                                             <svg xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" width="70"
@@ -778,7 +778,7 @@
                             <div class="swiper-slide">
                                 <div class="service-item service-item-2">
                                     <div class="service-thumb">
-                                        <img src="assets/img/service/Exhibitions.png" alt="service">
+                                        <img src="assets/img/service/exhibition.jpg" alt="service">
                                         <div class="service-icon">
                                             <svg xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" width="70"
@@ -819,7 +819,7 @@
                             <div class="swiper-slide">
                                 <div class="service-item service-item-2">
                                     <div class="service-thumb">
-                                        <img src="assets/img/service/PRandMarketing.png" alt="service">
+                                        <img src="assets/img/service/PR&MediaMarketing.jpg" alt="service">
                                         <div class="service-icon">
                                             <svg xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" width="70"
@@ -1020,7 +1020,7 @@
                             <div class="swiper-slide">
                                 <div class="service-item service-item-2">
                                     <div class="service-thumb">
-                                        <img src="assets/img/service/BrandMarketing.png" alt="service">
+                                        <img src="assets/img/service/BrandMarketing.jpg" alt="service">
                                         <div class="service-icon">
                                             <svg xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" width="70"
@@ -1278,8 +1278,8 @@
                     <div aria-hidden="true" class="marquee__group">
                         <img src="assets/img/logo/BrandsLogo/Ministry_Of_Maharastra.svg" alt="Spotify"
                             class="marquee__logo">
-                        <img src="assets/img/logo/BrandsLogo/Miss-Universe-Bangladesh.svg" alt="Miss-Universe-Bangladesh"
-                            class="marquee__logo">
+                        <img src="assets/img/logo/BrandsLogo/Miss-Universe-Bangladesh.svg"
+                            alt="Miss-Universe-Bangladesh" class="marquee__logo">
                         <img src="assets/img/logo/BrandsLogo/Miss_Universe.svg" alt="x" class="marquee__logo">
                         <img src="assets/img/logo/BrandsLogo/Moonwalkr.svg" alt="Spotify" class="marquee__logo">
                         <img src="assets/img/logo/BrandsLogo/Nanyang.svg" alt="Spotify" class="marquee__logo">
