--- a/error.html
+++ b/error.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
 
         <!-- Site Title -->
-        <title>R2MI - Error</title>
+        <title>R2M- Error</title>
 
         <!-- Place favicon.ico in the root directory -->
         <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
