--- a/service-details.html
+++ b/service-details.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
 
     <!-- Site Title -->
-    <title>R2MI - Services Details</title>
+    <title>R2M- Services Details</title>
 
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
