--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <ul class="side-menu-social ">
                 <li class="facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li class="instagram"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li class="twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li class="LinkedIn"><a href="#"><i class="fab fa-twitter"></i></a></li>
                 <li class="g-plus"><a href="#"><i class="fab fa-fab fa-google-plus"></i></a></li>
             </ul>
         </div>
@@ -246,7 +246,7 @@
                     </div>
                     <ul class="sidebar-social">
                         <li><a href="#">facebook</a></li>
-                        <li><a href="#">twitter</a></li>
+                        <li><a href="#">LinkedIn</a></li>
                         <li><a href="#">instagram</a></li>
                     </ul>
                 </div>
@@ -1641,7 +1641,7 @@
                                     <li class="pinterest">
                                         <a href="#"><i class="fab fa-pinterest"></i></a>
                                     </li>
-                                    <li class="twitter">
+                                    <li class="LinkedIn">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                     </li>
                                     <li class="instagram">
@@ -1667,7 +1667,7 @@
                                     <li class="pinterest">
                                         <a href="#"><i class="fab fa-pinterest"></i></a>
                                     </li>
-                                    <li class="twitter">
+                                    <li class="LinkedIn">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                     </li>
                                     <li class="instagram">
@@ -1693,7 +1693,7 @@
                                     <li class="pinterest">
                                         <a href="#"><i class="fab fa-pinterest"></i></a>
                                     </li>
-                                    <li class="twitter">
+                                    <li class="LinkedIn">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                     </li>
                                     <li class="instagram">
@@ -1719,7 +1719,7 @@
                                     <li class="pinterest">
                                         <a href="#"><i class="fab fa-pinterest"></i></a>
                                     </li>
-                                    <li class="twitter">
+                                    <li class="LinkedIn">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                     </li>
                                     <li class="instagram">
@@ -1969,7 +1969,7 @@
                             <li class="pinterest">
                                 <a href="#"><i class="fab fa-pinterest"></i></a>
                             </li>
-                            <li class="twitter">
+                            <li class="LinkedIn">
                                 <a href="#"><i class="fab fa-twitter"></i></a>
                             </li>
                             <li class="instagram">
