--- a/error.html
+++ b/error.html
@@ -200,7 +200,7 @@
                 <ul class="side-menu-social">
                     <li class="facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                     <li class="instagram"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li class="LinkedIn"><a href="#"><i class="fab fa-twitter"></i></a></li>
                     <li class="g-plus"><a href="#"><i class="fab fa-fab fa-google-plus"></i></a></li>
                 </ul>
             </div>
@@ -251,7 +251,7 @@
                             <li class="pinterest">
                                 <a href="#"><i class="fab fa-pinterest"></i></a>
                             </li>
-                            <li class="twitter">
+                            <li class="LinkedIn">
                                 <a href="#"><i class="fab fa-twitter"></i></a>
                             </li>
                             <li class="instagram">
