--- a/project-details.html
+++ b/project-details.html
@@ -212,7 +212,7 @@
                 <ul class="side-menu-social">
                     <li class="facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                     <li class="instagram"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li class="twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li class="LinkedIn"><a href="#"><i class="fab fa-twitter"></i></a></li>
                     <li class="g-plus"><a href="#"><i class="fab fa-fab fa-google-plus"></i></a></li>
                 </ul>
             </div>
@@ -336,10 +336,10 @@
                                             <a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a>
                                         </li>
                                         <li>
-                                            <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
+                                            <a href="#" class="LinkedIn"><i class="fab fa-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+                                            <a href="#" class="linkedin"><i class="fab fa-twitter-in"></i></a>
                                         </li>
                                         <li>
                                             <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
@@ -573,7 +573,7 @@
                                 <li class="pinterest">
                                     <a href="#"><i class="fab fa-pinterest"></i></a>
                                 </li>
-                                <li class="twitter">
+                                <li class="LinkedIn">
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                 </li>
                                 <li class="instagram">
