header for about updated + details pages added

--- a/about.html
+++ b/about.html
@@ -26,12 +26,12 @@
 
 <body>
     <!-- header-area-start -->
-    <header class="header header-2 sticky-active">
+    <header class="header header-3 sticky-active">
         <div class="primary-header">
             <div class="primary-header-inner">
                 <div class="header-logo d-lg-block">
                     <a href="index.html">
-                        <img class="logo-dark" src="assets/img/logo/logo-2.png" alt="Logo">
+                        <img class="logo-dark" src="assets/img/logo/logo-1.png" alt="Logo">
                         <img class="logo-light" src="assets/img/logo/logo-1.png" alt="Logo">
                     </a>
                 </div>
@@ -211,18 +211,18 @@
     <div id="smooth-wrapper">
         <div id="smooth-content">
 
-            <section class="page-header" data-background="assets/img/bg-img/page-header-bg.jpg">
-                <div class="overlay"></div>
-                <div class="shapes">
-                    <div class="shape shape-1"><img src="assets/img/shapes/page-header-shape-1.png" alt="shape"></div>
+            <section class="page-header" data-background="assets/img/aboutUs.png ">
+                <div class=""></div>
+                <!-- <div class="shapes">
+                    <div class="shape "><img src="assets/img/shapes/page-header-shape-1.png" alt="shape"></div>
                     <div class="shape shape-2"><img src="assets/img/shapes/page-header-shape-2.png" alt="shape"></div>
                     <div class="shape shape-3"><img src="assets/img/shapes/page-header-shape-3.png" alt="shape"></div>
-                </div>
+                </div> -->
                 <div class="container">
                     <div class="page-header-content text-center">
-                        <h1 class="title">About R2MI</h1>
-                        <h4 class="sub-title"><a class="home" href="/">Home </a><span></span><a class="inner-page"
-                                href="about.html"> About Us</a></h4>
+                        <h1 class="title"></h1>
+                        <!-- <h4 class="sub-title"><a class="home" href="/">Home </a><span></span><a class="inner-page"
+                                href="about.html"> About Us</a></h4> -->
                     </div>
                 </div>
             </section>
@@ -255,13 +255,13 @@
                                 </div>
                                 <div class="about-items">
                                     <div class="about-item">
-                                        <div class="icon"><img src="assets/img/icon/about-1.png" alt="icon"></div>
+                                        <div class="icon"><img src="assets/img/AboutUs.png" alt="icon"></div>
                                         <div class="content">
                                             <h4 class="title">Professional Creative <br>Team Members</h4>
                                         </div>
                                     </div>
                                     <div class="about-item">
-                                        <div class="icon"><img src="assets/img/icon/about-2.png" alt="icon"></div>
+                                        <div class="icon"><img src="assets/img/AboutUs.png" alt="icon"></div>
                                         <div class="content">
                                             <h4 class="title">Provide Market Standard <br>Service to Client’s</h4>
                                         </div>
