--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="header-menu-wrap">
                         <div class="mobile-menu-items">
                             <ul>
-                                <li class="mega-menu"> <a href="index.html">Home</a>
+                                <li class="mega-menu"> <a class="text-" href="index.html">Home</a>
                                     <!-- <ul>
                                             <li><a href="index.html">Web Design</a></li>
                                             <li><a href="index-2.html">Creative Studio</a></li>
@@ -1078,11 +1078,11 @@
                                     <img class="shape shape-2" src="assets/img/shapes/about-shape-2.png" alt="about">
                                 </div>
                                 <div class="img-1 reveal">
-                                    <img src="assets/img/images/about-img-2.jpg" alt="about">
+                                    <img src="assets/img/images/JB_Main_Menu_1.png" alt="about">
                                 </div>
-                                <div class="img-2 reveal">
+                                <!-- <div class="img-2 reveal">
                                     <img src="assets/img/images/about-img-3.jpg" alt="about">
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-12">
@@ -1128,7 +1128,7 @@
                 <div class="container">
                     <div class="service-top heading-space">
                         <div class="section-heading mb-0">
-                            <h4 class="sub-heading after-none" data-text-animation="fade-in" data-duration="1.5">Our Diverse Clientele</h4>
+                            <h4 class="sub-heading after-none" data-text-animation="fade-in" data-duration="1.5">Our Diverse Clientele Industries</h4>
                             <h2 class="section-title" data-text-animation="fade-in-right" data-split="char"
                                 data-duration="0.6" data-stagger="0.03">Diverse Industries, One Expert Partner</h2>
                         </div>
